Fix width issue with form not showing 2 fields per row

--- a/signupform.css
+++ b/signupform.css
@@ -93,8 +93,8 @@ form {
   /* font-size: 0.7rem; */
   /* font-weight: bold; */
   display: block;
-  width: 50%;
-  height: 300px;
+  width: 600px;
+  height: auto;
   /* margin: 0 auto; */
   translate: 0px 350px;
 }
